<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_to_chat_app">Welcome to Chat App</string>
    <string name="policy"><![CDATA[Read our Privacy Policy. Tap “Agree & Continue” to accept the Terms of Service.]]></string>
    <string name="enter_code">Enter SMS Code</string>
    <string name="request_otp">Send</string>
    <string name="from_jayesh_kumar">From\nJayesh Kumar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="set_up_your_profile">Set Up Your Profile</string>
    <string name="save_and_enjoy">Click Save and start chatting with your friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="done">Done</string>
    <string name="chat">Chats</string>
    <string name="group_chat">Group Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="save_changes">Save Changes</string>
    <string name="username">UserName</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="new_chat">New Chat</string>
    <string name="add_participants">Add participants</string>
    <string name="type_group_subject_here">Type group subject here..</string>
    <string name="failed">Failed</string>
    <string name="invalidOTP">enter valid otp</string>
</resources>